np.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-egress
  namespace: client
spec:
  podSelector:
  policyTypes:
    - Egress
