pod2external-destination-lgw-trace.txt
sh-5.2# ovn-trace --ct new 'inport=="client_client-5bf6767dd6-6hd6f" && eth.src==0a:58:0a:f4:00:06 && eth.dst==0a:58:0a:f4:00:01 && ip4.src==10.244.0.6 && ip4.dst==8.8.8.8 &
& ip.ttl==64 && tcp && tcp.src==36363 && tcp.dst==53'                                                                                                                        
# tcp,reg14=0x6,vlan_tci=0x0000,dl_src=0a:58:0a:f4:00:06,dl_dst=0a:58:0a:f4:00:01,nw_src=10.244.0.6,nw_dst=8.8.8.8,nw_tos=0,nw_ecn=0,nw_ttl=64,nw_frag=no,tp_src=36363,tp_dst
=53,tcp_flags=0                                                                                                                                                              
                                                                                                                                                                             
ingress(dp="ovn-worker", inport="client_client-5bf6767dd6-6hd6f")                                                                                                            
-----------------------------------------------------------------                                                                                                            
 0. ls_in_check_port_sec (northd.c:9757): 1, priority 50, uuid 5bf70c3a                                                                                                      
    reg0[15] = check_in_port_sec();                                                                                                                                          
    next;                                                                                                                                                                    
 4. ls_in_pre_acl (northd.c:7241): ip, priority 100, uuid d41c8c45                                                                                                           
    reg0[0] = 1;                                                                                                                                                             
    next;                                                                                                                                                                    
 5. ls_in_pre_lb (northd.c:7428): ip, priority 100, uuid 320fbc78                                                                                                            
    reg0[2] = 1;                                                                                                                                                             
    next;                                                                                                                                                                    
 6. ls_in_pre_stateful (northd.c:7451): reg0[2] == 1, priority 110, uuid cc9c8c6a                                                                                            
    ct_lb_mark;                                                                                                                                                              
                                                                                                                                                                             
ct_lb_mark                                                                                                                                                                   
----------                                                                                                                                                                   
 7. ls_in_acl_hint (northd.c:7509): ct.new && !ct.est, priority 7, uuid 6a64d369                                                                                             
    reg0[7] = 1;                                                                                                                                                             
    reg0[9] = 1;                                                                                                                                                             
    next;                                                                                                                                                                    
 8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid b616053b                                                                                                 
    reg0[1] = 1;                                                                                                                                                             
    next;                                                                                                                                                                    
 9. ls_in_acl_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid baaba3ac
    reg8[30..31] = 1;
    next(8);
8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid b616053b
    reg0[1] = 1;
    next;
 9. ls_in_acl_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid b03cc958
    reg8[30..31] = 2;
    next(8);
 8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid b616053b
    reg0[1] = 1;
    next;
 9. ls_in_acl_action (northd.c:7917): 1, priority 0, uuid aeb99ecb
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
    next;
15. ls_in_pre_hairpin (northd.c:8903): ip && ct.trk, priority 100, uuid 806a0221
    reg0[6] = chk_lb_hairpin();
    reg0[12] = chk_lb_hairpin_reply();
    next;
19. ls_in_acl_after_lb_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid 3be403c2
    reg8[30..31] = 1;
    next(18);
19. ls_in_acl_after_lb_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid 718caa48
    reg8[30..31] = 2;
    next(18);
19. ls_in_acl_after_lb_action (northd.c:7917): 1, priority 0, uuid 86573acb
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
    next;
20. ls_in_stateful (northd.c:8877): reg0[1] == 1 && reg0[13] == 0, priority 100, uuid 97bdd5cd
    ct_commit { ct_mark.blocked = 0; };
    next;
27. ls_in_l2_lkup (northd.c:10583): eth.dst == { 0a:58:a9:fe:01:01, 0a:58:0a:f4:00:01 }, priority 50, uuid e2ad6a5b
    outport = "stor-ovn-worker";
    output;

egress(dp="ovn-worker", inport="client_client-5bf6767dd6-6hd6f", outport="stor-ovn-worker")
-------------------------------------------------------------------------------------------
 0. ls_out_pre_acl (northd.c:7122): ip && outport == "stor-ovn-worker", priority 110, uuid e002751a
    next;
 1. ls_out_pre_lb (northd.c:7122): ip && outport == "stor-ovn-worker", priority 110, uuid 912f60f1
    next;
 3. ls_out_acl_hint (northd.c:7509): ct.new && !ct.est, priority 7, uuid b94d1106
    reg0[7] = 1;
    reg0[9] = 1;
    next;
 4. ls_out_acl_eval (northd.c:8090): ip && !ct.est, priority 1, uuid 52fb825c
    reg0[1] = 1;
    next;
 5. ls_out_acl_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid 3c037071
    reg8[30..31] = 1;
    next(4);
 4. ls_out_acl_eval (northd.c:8090): ip && !ct.est, priority 1, uuid 52fb825c
    reg0[1] = 1;
    next;
 5. ls_out_acl_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid 77632f9d
    reg8[30..31] = 2;
    next(4);
 4. ls_out_acl_eval (northd.c:8090): ip && !ct.est, priority 1, uuid 52fb825c
    reg0[1] = 1;
    next;
5. ls_out_acl_action (northd.c:7917): 1, priority 0, uuid 368365c0
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
    next;
 8. ls_out_stateful (northd.c:8881): reg0[1] == 1 && reg0[13] == 0, priority 100, uuid 21235a6f
    ct_commit { ct_mark.blocked = 0; };
    next;
 9. ls_out_check_port_sec (northd.c:7087): 1, priority 0, uuid 8159e419
    reg0[15] = check_out_port_sec();
    next;
10. ls_out_apply_port_sec (northd.c:7092): 1, priority 0, uuid ccc46668
    output;
    /* output to "stor-ovn-worker", type "patch" */

ingress(dp="ovn_cluster_router", inport="rtos-ovn-worker")
----------------------------------------------------------
 0. lr_in_admission (northd.c:12977): eth.dst == { 0a:58:a9:fe:01:01, 0a:58:0a:f4:00:01 } && inport == "rtos-ovn-worker" && is_chassis_resident("cr-rtos-ovn-worker"), priori
ty 50, uuid 53bad9b2
    xreg0[0..47] = 0a:58:0a:f4:00:01;
    next;
 1. lr_in_lookup_neighbor (northd.c:13161): 1, priority 0, uuid a1ae98f3
    reg9[2] = 1;
    next;
 2. lr_in_learn_neighbor (northd.c:13170): reg9[2] == 1 || reg9[3] == 0, priority 100, uuid aa2c5ec1
    mac_cache_use;
    next;
12. lr_in_ip_routing_pre (northd.c:13395): 1, priority 0, uuid b60edefc
    reg7 = 0;
    next;
13. lr_in_ip_routing (northd.c:11771): ip4.src == 10.244.0.0/24, priority 72, uuid 0b8c9c84
    ip.ttl--;
    reg8[0..15] = 0;
    reg0 = 10.244.0.2;
    reg1 = 10.244.0.1;
    eth.src = 0a:58:0a:f4:00:01;
    outport = "rtos-ovn-worker";
    flags.loopback = 1;
    next;
14. lr_in_ip_routing_ecmp (northd.c:13490): reg8[0..15] == 0, priority 150, uuid bc98eb8c
    next;
15. lr_in_policy (northd.c:13655): 1, priority 0, uuid a43f0936
    reg8[0..15] = 0;
    next;
16. lr_in_policy_ecmp (northd.c:13657): reg8[0..15] == 0, priority 150, uuid 65961d2e
    next;
17. lr_in_arp_resolve (northd.c:13870): outport == "rtos-ovn-worker" && reg0 == 10.244.0.2, priority 100, uuid 0836a17e
    eth.dst = 9e:20:a4:fb:1c:7e;
    next;
20. lr_in_gw_redirect (northd.c:14184): outport == "rtos-ovn-worker", priority 50, uuid d7a78462
    outport = "cr-rtos-ovn-worker";
    next;
21. lr_in_arp_request (northd.c:14302): 1, priority 0, uuid 43a48565
    output;
    /* Replacing type "chassisredirect" outport "cr-rtos-ovn-worker" with distributed port "rtos-ovn-worker". */

egress(dp="ovn_cluster_router", inport="rtos-ovn-worker", outport="rtos-ovn-worker")
------------------------------------------------------------------------------------
 0. lr_out_chk_dnat_local (northd.c:15662): 1, priority 0, uuid b59278ea
    reg9[4] = 0;
    next;
 6. lr_out_delivery (northd.c:14348): outport == "rtos-ovn-worker", priority 100, uuid 52210919
    output;
    /* output to "rtos-ovn-worker", type "patch" */

ingress(dp="ovn-worker", inport="stor-ovn-worker")
--------------------------------------------------
 0. ls_in_check_port_sec (northd.c:9757): 1, priority 50, uuid 5bf70c3a
    reg0[15] = check_in_port_sec();
    next;
 4. ls_in_pre_acl (northd.c:7119): ip && inport == "stor-ovn-worker", priority 110, uuid ddabad7a
    next;
 5. ls_in_pre_lb (northd.c:7119): ip && inport == "stor-ovn-worker", priority 110, uuid 488906a2
    next;
 7. ls_in_acl_hint (northd.c:7509): ct.new && !ct.est, priority 7, uuid 6a64d369
    reg0[7] = 1;
    reg0[9] = 1;
    next;
 8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid b616053b
    reg0[1] = 1;
    next;
 9. ls_in_acl_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid baaba3ac
    reg8[30..31] = 1;
    next(8);
 8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid b616053b
    reg0[1] = 1;
    next;
 9. ls_in_acl_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid b03cc958
    reg8[30..31] = 2;
    next(8);
 8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid b616053b
    reg0[1] = 1;
    next;
 9. ls_in_acl_action (northd.c:7917): 1, priority 0, uuid aeb99ecb
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
    next;
15. ls_in_pre_hairpin (northd.c:8903): ip && ct.trk, priority 100, uuid 806a0221
    reg0[6] = chk_lb_hairpin();
    reg0[12] = chk_lb_hairpin_reply();
    next;
19. ls_in_acl_after_lb_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid 3be403c2
    reg8[30..31] = 1;
    next(18);
19. ls_in_acl_after_lb_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid 718caa48
    reg8[30..31] = 2;
    next(18);
19. ls_in_acl_after_lb_action (northd.c:7917): 1, priority 0, uuid 86573acb
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
    next;
20. ls_in_stateful (northd.c:8877): reg0[1] == 1 && reg0[13] == 0, priority 100, uuid 97bdd5cd
    ct_commit { ct_mark.blocked = 0; };
    next;
27. ls_in_l2_lkup (northd.c:10510): eth.dst == 9e:20:a4:fb:1c:7e, priority 50, uuid 6652bf51
    outport = "k8s-ovn-worker";
    output;

egress(dp="ovn-worker", inport="stor-ovn-worker", outport="k8s-ovn-worker")
---------------------------------------------------------------------------
 0. ls_out_pre_acl (northd.c:7243): ip, priority 100, uuid f45186bc
    reg0[0] = 1;
    next;
 1. ls_out_pre_lb (northd.c:7430): ip, priority 100, uuid a7f5a3a1
    reg0[2] = 1;
    next;
 2. ls_out_pre_stateful (northd.c:7454): reg0[2] == 1, priority 110, uuid 190a70ec
    ct_lb_mark;
ct_lb_mark /* default (use --ct to customize) */
------------------------------------------------
 3. ls_out_acl_hint (northd.c:7572): ct.est && ct_mark.blocked == 0, priority 1, uuid 9677049b
    reg0[10] = 1;
    next;
 5. ls_out_acl_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid 3c037071
    reg8[30..31] = 1;
    next(4);
 5. ls_out_acl_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid 77632f9d
    reg8[30..31] = 2;
    next(4);
 5. ls_out_acl_action (northd.c:7917): 1, priority 0, uuid 368365c0
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
    next;
 9. ls_out_check_port_sec (northd.c:7087): 1, priority 0, uuid 8159e419
    reg0[15] = check_out_port_sec();
    next;
10. ls_out_apply_port_sec (northd.c:7092): 1, priority 0, uuid ccc46668
    output;
    /* output to "k8s-ovn-worker", type "" */
