pod2external-destination-sgw-trace.txt
sh-5.2# ovn-trace --ct new 'inport=="client_client-5bf6767dd6-7sspp" && eth.src==0a:58:0a:f4:01:03 && eth.dst==0a:58:0a:f4:01:01 && ip4.src==10.244.1.3 && ip4.dst==8.8.8.8 &
& ip.ttl==64 && tcp && tcp.src==36363 && tcp.dst==53'
# tcp,reg14=0x3,vlan_tci=0x0000,dl_src=0a:58:0a:f4:01:03,dl_dst=0a:58:0a:f4:01:01,nw_src=10.244.1.3,nw_dst=8.8.8.8,nw_tos=0,nw_ecn=0,nw_ttl=64,nw_frag=no,tp_src=36363,tp_dst
=53,tcp_flags=0

ingress(dp="ovn-worker", inport="client_client-5bf6767dd6-7sspp")
-----------------------------------------------------------------
 0. ls_in_check_port_sec (northd.c:9757): 1, priority 50, uuid baed899d
    reg0[15] = check_in_port_sec();
    next;
 4. ls_in_pre_acl (northd.c:7241): ip, priority 100, uuid e91280d0
    reg0[0] = 1;
    next;
 5. ls_in_pre_lb (northd.c:7428): ip, priority 100, uuid ee45626b
    reg0[2] = 1;
    next;
 6. ls_in_pre_stateful (northd.c:7451): reg0[2] == 1, priority 110, uuid 5b4b6a90
    ct_lb_mark;

ct_lb_mark
----------
 7. ls_in_acl_hint (northd.c:7509): ct.new && !ct.est, priority 7, uuid 613c2bdd
    reg0[7] = 1;
    reg0[9] = 1;
    next;
 8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid 36a4fbe1
    reg0[1] = 1;
    next;
 9. ls_in_acl_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid 01c99249
    reg8[30..31] = 1;
    next(8);
 8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid 36a4fbe1
    reg0[1] = 1;
    next;
9. ls_in_acl_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid 01c99249
    reg8[30..31] = 1;
    next(8);
 8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid 36a4fbe1
    reg0[1] = 1;
    next;
 9. ls_in_acl_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid d2e1c520
    reg8[30..31] = 2;
    next(8);
 8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid 36a4fbe1
    reg0[1] = 1;
    next;
 9. ls_in_acl_action (northd.c:7917): 1, priority 0, uuid 0c7c7dd9
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
    next;
15. ls_in_pre_hairpin (northd.c:8903): ip && ct.trk, priority 100, uuid f219d632
    reg0[6] = chk_lb_hairpin();
    reg0[12] = chk_lb_hairpin_reply();
    next;
19. ls_in_acl_after_lb_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid ff3d56d2
    reg8[30..31] = 1;
    next(18);
19. ls_in_acl_after_lb_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid 974bdebe
    reg8[30..31] = 2;
    next(18);
19. ls_in_acl_after_lb_action (northd.c:7917): 1, priority 0, uuid a06cfb7a
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
    next;
20. ls_in_stateful (northd.c:8877): reg0[1] == 1 && reg0[13] == 0, priority 100, uuid 7887a147
    ct_commit { ct_mark.blocked = 0; };
    next;
27. ls_in_l2_lkup (northd.c:10583): eth.dst == { 0a:58:a9:fe:01:01, 0a:58:0a:f4:01:01 }, priority 50, uuid b4ee2cd7                                                [155/9436]
    outport = "stor-ovn-worker";
    output;

egress(dp="ovn-worker", inport="client_client-5bf6767dd6-7sspp", outport="stor-ovn-worker")
-------------------------------------------------------------------------------------------
 0. ls_out_pre_acl (northd.c:7122): ip && outport == "stor-ovn-worker", priority 110, uuid 78b8b5ed
    next;
 1. ls_out_pre_lb (northd.c:7122): ip && outport == "stor-ovn-worker", priority 110, uuid e1833376
    next;
 3. ls_out_acl_hint (northd.c:7509): ct.new && !ct.est, priority 7, uuid 2b307c11
    reg0[7] = 1;
    reg0[9] = 1;
    next;
 4. ls_out_acl_eval (northd.c:8090): ip && !ct.est, priority 1, uuid 7512a93e
    reg0[1] = 1;
    next;
 5. ls_out_acl_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid fc1e56c9
    reg8[30..31] = 1;
    next(4);
 4. ls_out_acl_eval (northd.c:8090): ip && !ct.est, priority 1, uuid 7512a93e
    reg0[1] = 1;
    next;
 5. ls_out_acl_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid 6b54a8bc
    reg8[30..31] = 2;
    next(4);
 4. ls_out_acl_eval (northd.c:8090): ip && !ct.est, priority 1, uuid 7512a93e
    reg0[1] = 1;
    next;
 5. ls_out_acl_action (northd.c:7917): 1, priority 0, uuid 84ce3eca
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
    next;
 8. ls_out_stateful (northd.c:8881): reg0[1] == 1 && reg0[13] == 0, priority 100, uuid dc7c1376
    ct_commit { ct_mark.blocked = 0; };
    next;
 9. ls_out_check_port_sec (northd.c:7087): 1, priority 0, uuid 39505c87
    reg0[15] = check_out_port_sec();
    next;
10. ls_out_apply_port_sec (northd.c:7092): 1, priority 0, uuid 0171f0af
    output;
    /* output to "stor-ovn-worker", type "patch" */

ingress(dp="ovn_cluster_router", inport="rtos-ovn-worker")
----------------------------------------------------------
 0. lr_in_admission (northd.c:12977): eth.dst == { 0a:58:a9:fe:01:01, 0a:58:0a:f4:01:01 } && inport == "rtos-ovn-worker" && is_chassis_resident("cr-rtos-ovn-worker"), priori
ty 50, uuid 2df00eb1
    xreg0[0..47] = 0a:58:0a:f4:01:01;
    next;
 1. lr_in_lookup_neighbor (northd.c:13161): 1, priority 0, uuid 87c0bb51
    reg9[2] = 1;
    next;
 2. lr_in_learn_neighbor (northd.c:13170): reg9[2] == 1 || reg9[3] == 0, priority 100, uuid 53e15059
    mac_cache_use;
    next;
12. lr_in_ip_routing_pre (northd.c:13395): 1, priority 0, uuid 53502ff7
    reg7 = 0;
    next;
13. lr_in_ip_routing (northd.c:11771): ip4.src == 10.244.1.0/24, priority 72, uuid 10f316a4
    ip.ttl--;
    reg8[0..15] = 0;
    reg0 = 100.64.0.2;
    reg1 = 100.64.0.1;
    eth.src = 0a:58:64:40:00:01;
    outport = "rtoj-ovn_cluster_router";
    flags.loopback = 1;
    next;
14. lr_in_ip_routing_ecmp (northd.c:13490): reg8[0..15] == 0, priority 150, uuid f6bd3288
    next;
15. lr_in_policy (northd.c:13655): 1, priority 0, uuid 5a850bda
    reg8[0..15] = 0;
    next;
16. lr_in_policy_ecmp (northd.c:13657): reg8[0..15] == 0, priority 150, uuid 5743d8c1
    next;
17. lr_in_arp_resolve (northd.c:13949): outport == "rtoj-ovn_cluster_router" && reg0 == 100.64.0.2, priority 100, uuid d0396a49
    eth.dst = 0a:58:64:40:00:02;
    next;
21. lr_in_arp_request (northd.c:14302): 1, priority 0, uuid a3f02d7f
    output;
egress(dp="ovn_cluster_router", inport="rtos-ovn-worker", outport="rtoj-ovn_cluster_router")
--------------------------------------------------------------------------------------------
 0. lr_out_chk_dnat_local (northd.c:15662): 1, priority 0, uuid 41991236
    reg9[4] = 0;
    next;
 6. lr_out_delivery (northd.c:14348): outport == "rtoj-ovn_cluster_router", priority 100, uuid b8e7dc5f
    output;
    /* output to "rtoj-ovn_cluster_router", type "patch" */

ingress(dp="join", inport="jtor-ovn_cluster_router")
----------------------------------------------------
 0. ls_in_check_port_sec (northd.c:9757): 1, priority 50, uuid baed899d
    reg0[15] = check_in_port_sec();
    next;
 5. ls_in_pre_lb (northd.c:7119): ip && inport == "jtor-ovn_cluster_router", priority 110, uuid eab23d74
    next;
27. ls_in_l2_lkup (northd.c:10583): eth.dst == 0a:58:64:40:00:02, priority 50, uuid cc28cd0b
    outport = "jtor-GR_ovn-worker";
    output;

egress(dp="join", inport="jtor-ovn_cluster_router", outport="jtor-GR_ovn-worker")
---------------------------------------------------------------------------------
 1. ls_out_pre_lb (northd.c:7122): ip && outport == "jtor-GR_ovn-worker", priority 110, uuid 8aa51db5
    ct_clear;
    next;
 9. ls_out_check_port_sec (northd.c:7087): 1, priority 0, uuid 39505c87
    reg0[15] = check_out_port_sec();
    next;
10. ls_out_apply_port_sec (northd.c:7092): 1, priority 0, uuid 0171f0af
    output;
    /* output to "jtor-GR_ovn-worker", type "l3gateway" */

ingress(dp="GR_ovn-worker", inport="rtoj-GR_ovn-worker")
--------------------------------------------------------
 0. lr_in_admission (northd.c:12977): eth.dst == 0a:58:64:40:00:02 && inport == "rtoj-GR_ovn-worker", priority 50, uuid c7fa1981
    reg9[1] = check_pkt_larger(1414);
    xreg0[0..47] = 0a:58:64:40:00:02;
    next;
 1. lr_in_lookup_neighbor (northd.c:13161): 1, priority 0, uuid 87c0bb51
    reg9[2] = 1;
    next;
 2. lr_in_learn_neighbor (northd.c:13170): reg9[2] == 1 || reg9[3] == 0, priority 100, uuid 53e15059
    mac_cache_use;
    next;
12. lr_in_ip_routing_pre (northd.c:13395): 1, priority 0, uuid 53502ff7
    reg7 = 0;
    next;
13. lr_in_ip_routing (northd.c:11771): reg7 == 0 && ip4.dst == 0.0.0.0/0, priority 1, uuid 05eea456
    ip.ttl--;
    reg8[0..15] = 0;
    reg0 = 172.18.0.1;
    reg1 = 172.18.0.4;
    eth.src = 02:42:ac:12:00:04;
    outport = "rtoe-GR_ovn-worker";
    flags.loopback = 1;
    next;
14. lr_in_ip_routing_ecmp (northd.c:13490): reg8[0..15] == 0, priority 150, uuid f6bd3288
    next;
15. lr_in_policy (northd.c:13655): 1, priority 0, uuid 5a850bda
    reg8[0..15] = 0;
    next;
16. lr_in_policy_ecmp (northd.c:13657): reg8[0..15] == 0, priority 150, uuid 5743d8c1
    next;
17. lr_in_arp_resolve (northd.c:13691): ip4, priority 1, uuid 2cc984fc                                                                                                       
    get_arp(outport, reg0);                                                                                                                                                  
    /* MAC binding to 02:42:96:d7:3e:4f. */                                                                                                                                  
    next;
18. lr_in_chk_pkt_len (northd.c:12977): outport == "rtoe-GR_ovn-worker", priority 50, uuid cc740d2e
    reg9[1] = check_pkt_larger(1414);
    next;
21. lr_in_arp_request (northd.c:14302): 1, priority 0, uuid a3f02d7f                                                                                               [10/10735]
    output;                                                                                                                                                                  
                                                                                                                                                                             
egress(dp="GR_ovn-worker", inport="rtoj-GR_ovn-worker", outport="rtoe-GR_ovn-worker")                                                                                        
-------------------------------------------------------------------------------------                                                                                        
 0. lr_out_chk_dnat_local (northd.c:15662): 1, priority 0, uuid 41991236                                                                                                     
    reg9[4] = 0;                                                                                                                                                             
    next;                                                                                                                                                                    
 1. lr_out_undnat (northd.c:15743): ip, priority 50, uuid cc9e9093                                                                                                           
    flags.loopback = 1;                                                                                                                                                      
    ct_dnat;                                                                                                                                                                 

ct_dnat /* assuming no un-dnat entry, so no change */ /* default (use --ct to customize) */
-------------------------------------------------------------------------------------------
 3. lr_out_snat (northd.c:15394): ip && ip4.src == 10.244.1.3 && (!ct.trk || !ct.rpl), priority 33, uuid a2090372
    ct_snat(172.18.0.4);

ct_snat(ip4.src=172.18.0.4)
---------------------------
 6. lr_out_delivery (northd.c:14348): outport == "rtoe-GR_ovn-worker", priority 100, uuid 7c320f41
    output;
    /* output to "rtoe-GR_ovn-worker", type "l3gateway" */


ingress(dp="ext_ovn-worker", inport="etor-GR_ovn-worker")
---------------------------------------------------------
 0. ls_in_check_port_sec (northd.c:9757): 1, priority 50, uuid baed899d
    reg0[15] = check_in_port_sec();
    next;
 5. ls_in_pre_lb (northd.c:7352): eth.mcast, priority 110, uuid 8fcee7d3
    next;
27. ls_in_l2_lkup (northd.c:9219): eth.src == {02:42:ac:12:00:04} && (arp.op == 1 || rarp.op == 3 || nd_ns), priority 75, uuid 6399df34
    outport = "_MC_flood_l2";
    output;
multicast(dp="ext_ovn-worker", mcgroup="_MC_flood_l2")
------------------------------------------------------

    egress(dp="ext_ovn-worker", inport="etor-GR_ovn-worker", outport="breth0_ovn-worker")
    -------------------------------------------------------------------------------------
         1. ls_out_pre_lb (northd.c:7353): eth.mcast, priority 110, uuid de176daa
            next;
         9. ls_out_check_port_sec (northd.c:7085): eth.mcast, priority 100, uuid 0eeb2065
            reg0[15] = 0;
            next;
        10. ls_out_apply_port_sec (northd.c:7092): 1, priority 0, uuid 0171f0af
            output;
            /* output to "breth0_ovn-worker", type "localnet" */
