pod2external-destination-sgw-with-efw-trace.txt
sh-5.2# ovn-trace --ct new 'inport=="client_client-5bf6767dd6-7sspp" && eth.src==0a:58:0a:f4:01:03 && eth.dst==0a:58:0a:f4:01:01 && ip4.src==10.244.1.3 && ip4.dst==8.8.8.8 &
& ip.ttl==64 && tcp && tcp.src==36363 && tcp.dst==53'                                                                                                                        
# tcp,reg14=0x3,vlan_tci=0x0000,dl_src=0a:58:0a:f4:01:03,dl_dst=0a:58:0a:f4:01:01,nw_src=10.244.1.3,nw_dst=8.8.8.8,nw_tos=0,nw_ecn=0,nw_ttl=64,nw_frag=no,tp_src=36363,tp_dst
=53,tcp_flags=0                                                                                                                                                              
                                                                                                                                                                             
ingress(dp="ovn-worker", inport="client_client-5bf6767dd6-7sspp")                                                                                                            
-----------------------------------------------------------------                                                                                                            
 0. ls_in_check_port_sec (northd.c:9757): 1, priority 50, uuid baed899d                                                                                                      
    reg0[15] = check_in_port_sec();                                                                                                                                          
    next;                                                                                                                                                                    
 4. ls_in_pre_acl (northd.c:7241): ip, priority 100, uuid e91280d0                                                                                                           
    reg0[0] = 1;                                                                                                                                                             
    next;                                                                                                                                                                    
 5. ls_in_pre_lb (northd.c:7428): ip, priority 100, uuid ee45626b                                                                                                            
    reg0[2] = 1;                                                                                                                                                             
    next;                                                                                                                                                                    
 6. ls_in_pre_stateful (northd.c:7451): reg0[2] == 1, priority 110, uuid 5b4b6a90                                                                                            
    ct_lb_mark;                                                                                                                                                              
                                                                                                                                                                             
ct_lb_mark                                                                                                                                                                   
----------                                                                                                                                                                   
 7. ls_in_acl_hint (northd.c:7509): ct.new && !ct.est, priority 7, uuid 613c2bdd                                                                                             
    reg0[7] = 1;                                                                                                                                                             
    reg0[9] = 1;                                                                                                                                                             
    next;                                                                                                                                                                    
 8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid 36a4fbe1                                                                                                 
    reg0[1] = 1;                                                                                                                                                             
    next;                                                                                                                                                                    
 9. ls_in_acl_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid 01c99249                                                                                         
    reg8[30..31] = 1;                                                                                                                                                        
    next(8);                                                             
8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid 36a4fbe1                                                                                                 
    reg0[1] = 1;
    next;
 9. ls_in_acl_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid d2e1c520
    reg8[30..31] = 2;
    next(8);
 8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid 36a4fbe1
    reg0[1] = 1;
    next;
 9. ls_in_acl_action (northd.c:7917): 1, priority 0, uuid 0c7c7dd9
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
    next;
15. ls_in_pre_hairpin (northd.c:8903): ip && ct.trk, priority 100, uuid f219d632
    reg0[6] = chk_lb_hairpin();
    reg0[12] = chk_lb_hairpin_reply();
    next;
19. ls_in_acl_after_lb_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid ff3d56d2
    reg8[30..31] = 1;
    next(18);
19. ls_in_acl_after_lb_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid 974bdebe
    reg8[30..31] = 2;
    next(18);
19. ls_in_acl_after_lb_action (northd.c:7917): 1, priority 0, uuid a06cfb7a
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
    next;
20. ls_in_stateful (northd.c:8877): reg0[1] == 1 && reg0[13] == 0, priority 100, uuid 7887a147
    ct_commit { ct_mark.blocked = 0; };
    next;
27. ls_in_l2_lkup (northd.c:10583): eth.dst == { 0a:58:a9:fe:01:01, 0a:58:0a:f4:01:01 }, priority 50, uuid b4ee2cd7
    outport = "stor-ovn-worker";
    output;

egress(dp="ovn-worker", inport="client_client-5bf6767dd6-7sspp", outport="stor-ovn-worker")
-------------------------------------------------------------------------------------------
 0. ls_out_pre_acl (northd.c:7122): ip && outport == "stor-ovn-worker", priority 110, uuid 78b8b5ed
    next;
 1. ls_out_pre_lb (northd.c:7122): ip && outport == "stor-ovn-worker", priority 110, uuid e1833376
    next;
 3. ls_out_acl_hint (northd.c:7509): ct.new && !ct.est, priority 7, uuid 2b307c11
    reg0[7] = 1;
    reg0[9] = 1;
    next;
 4. ls_out_acl_eval (northd.c:8090): ip && !ct.est, priority 1, uuid 7512a93e
    reg0[1] = 1;
    next;
 5. ls_out_acl_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid fc1e56c9
    reg8[30..31] = 1;
    next(4);
 4. ls_out_acl_eval (northd.c:8090): ip && !ct.est, priority 1, uuid 7512a93e
    reg0[1] = 1;
    next;
5. ls_out_acl_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid 6b54a8bc
    reg8[30..31] = 2;
    next(4);
 4. ls_out_acl_eval (northd.c:7763): reg8[30..31] == 2 && reg0[9] == 1 && ((ip4.dst == 0.0.0.0/0 && ip4.dst != 10.244.0.0/16) && ip4.src == $a18359635110734089290), priority
 11000, uuid 3986f169
    reg8[17] = 1;
    next;
 5. ls_out_acl_action (northd.c:7895): reg8[17] == 1, priority 1000, uuid ef942608
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
sh-5.2#
